# practica3IS

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  backup.sql  cmake_install.cmake  src
actividad/: CMakeLists.txt  actividad-main.cc  actividad.h
estadisticas/: CMakeLists.txt  estadisticas.h
include/: CMakeLists.txt  actividad.hpp  appexceptions.hpp  certificado.hpp  certificadoasistencia.hpp  director.hpp  estadisticas.hpp  usuarioregistrado.hpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/actividad/: CMakeLists.txt  Makefile  actividad-main  actividad.h
src/director/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  director_academico.h
src/estadisticas/: CMakeLists.txt  cmake_install.cmake  estadisticas-main  estadisticas.h
tests/: CMakeLists.txt  actividad-test.cc  estadisticas-test.cc
